<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/home_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/search"
            android:contentDescription="@string/todo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="#FFFFFF"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView6"
            app:layout_constraintTop_toTopOf="@+id/cardView6">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="67dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/mainline"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/new_cases_icon"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/new_cases"
                    android:textColor="#1E2432"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                    app:layout_constraintStart_toEndOf="@+id/imageView9"
                    app:layout_constraintTop_toTopOf="@+id/imageView9"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/_52"
                    android:textColor="#1E2432"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/imageView9"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/people"
                    android:textColor="#1E2432"
                    android:textSize="9sp"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    tools:ignore="SmallSp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView6"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="#FFFFFF"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toStartOf="@+id/cardView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="67dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/mainline"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/recovered_icon"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/total_recovered"
                    android:textColor="#1E2432"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView8"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/_689"
                    android:textColor="#1E2432"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/imageView8"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/people"
                    android:textColor="#1E2432"
                    android:textSize="9sp"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    tools:ignore="SmallSp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="#FFFFFF"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toStartOf="@+id/cardView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/confirm_icon"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/confirmed_cases"
                    android:textColor="#1E2432"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="@+id/imageView6"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/_1_062"
                    android:textColor="#1E2432"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/people"
                    android:textColor="#1E2432"
                    android:textSize="9sp"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:ignore="SmallSp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="67dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/mainline"
                    android:contentDescription="@string/todo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="#FFFFFF"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView4"
            app:layout_constraintTop_toTopOf="@+id/cardView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="67dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/mainline"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/death_icon"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/total_death"
                    android:textColor="#1E2432"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="@+id/imageView7"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/_75"
                    android:textColor="#1E2432"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/people"
                    android:textColor="#1E2432"
                    android:textSize="9sp"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    tools:ignore="SmallSp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>